src/style/style.css
/* ... */
.selector-actions {
    display: flex;
    gap: 0.5rem;

    position: absolute;
    transform: translate(-50%, -50%);
    right: -1.5rem;
    top: 50%;

    opacity: 0;
    pointer-events: none;
}

.selector-button {
    background-color: var(--black);
    border: none;
    outline: 1px solid var(--black-lighter);
    border-radius: 4px;
    aspect-ratio: 1 / 1;

    display: flex;
    justify-content: center;
    align-items: center;
    transition: outline 0.2s ease-in-out, background-color 0.2s ease-in-out;
}

.selector-button span {
    font-size: 1.25rem;
    pointer-events: none;
}

.selector-button:hover {
    cursor: pointer;
    outline-color: var(--accent);
}

.project-selector.selected .selector-actions {
    opacity: 1;
    pointer-events: all;
}

.project-selector:hover {
    background-color: var(--black);
    border-color: var(--black-lighter);
    cursor: pointer;
}

.project-selector:hover .selector-actions {
    opacity: 1;
    pointer-events: all;
}

.selector-button:active {
    background-color: var(--black-lighter);
}

.project-selector.selected {
    color: var(--white);
    background-color: var(--black);
    border: 1px solid var(--accent);
}

#new-project {
    display: flex;
    align-items: center;
    background-color: var(--accent);
    color: var(--black-darker);
    border: none;
    padding: 0.25rem 0.75rem;
    border-radius: 0.5rem;
    margin: 1rem auto 0;
    font-family: "Poppins", sans-serif;
    font-weight: 700;
}

#new-project:hover {
    cursor: pointer;
    outline: 1px solid var(--white);
}

#new-project:active {
    background-color: var(--accent-darker);
}

.project-container h3 {
    margin: 0 1rem 0.5rem;
    font-size: 1.5rem;
}

.project-main {
    width: min(100ch, 100%);
    padding: 2rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    grid-area: project-content;
}

.project-header {
    color: var(--black);
}

.project-header h2 {
    font-size: 2.5rem;
}

#project-header {
    font-size: 1.5rem;
    overflow: auto;
}

.project-header span {
    font-family: inherit;
    font-size: inherit;
}

#header-name,
.project-name {
    color: var(--accent);
}

#header-name {
    word-wrap: break-word;
}

#tasks-container {
    border: 2px solid var(--black);
    border-radius: 1rem;
    margin-top: 4rem;
    width: 100%;
    padding: 1rem;

    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.button-transition {
    transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
}

.project-actions {
    display: flex;
    justify-content: space-between;
}

.project-button {
    padding: 0.25rem 0.5rem;
    border: 1px solid var(--grey);
    border-radius: 0.5rem;
    font-size: 1rem;
    background-color: var(--white);
    font-family: "Nunito", sans-serif;
    font-weight: 700;

    display: flex;
    align-items: center;
}

.project-button span {
    color: var(--accent);
}

.project-button:hover,
.combo-box:hover {
    border-color: var(--accent);
    cursor: pointer;
}

.project-button:active,
.combo-box:active {
    background-color: var(--white-grey);
}

.sort-container {
    font-weight: 700;
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.combo-box {
    padding: 0.5rem;
    border: 1px solid var(--grey);
    border-radius: 0.5rem;
    background-color: var(--white);
    font-size: 1rem;
    font-weight: 700;
    transition: border-color 0.2s ease-in-out;
    height: 100%;
}

.placeholder-wrapper {
    padding: 1rem;
    font-size: 1.5rem;
    font-weight: 700;
    display: none;
}

.placeholder-wrapper img {
    width: 70%;
}

#project-tasks:empty ~ .placeholder-wrapper {
    display: grid;
    place-items: center;
    gap: 1rem;
}

#project-tasks {
    display: grid;
    grid-template-columns: 1fr;
    gap: 0.5rem;
}

#project-tasks:empty {
    display: none;
}

.task-container {
    border: 1px solid var(--grey);
    border-radius: 0.5rem;
    padding: 0.5rem 1rem;
    /* overflow-y: clip; */
}

.project-task {
    width: 100%;
    position: relative;

    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
}

.task-content {
    flex: 1 1 0;
    height: 100%;
    display: grid;
}

.task-header {
    /* display: inline; */
    display: flex;
    align-items: center;
    font-size: 1.25rem;
    transition: color 0.33s cubic-bezier(0.25, 0.46, 0.45, 0.94);
    position: relative;
    width: fit-content;
}

.task-header::before {
    content: "";
    display: block;
    height: 2px;
    width: 0;
    position: absolute;
    top: 50%;
    left: -4px;
    background-color: var(--black-darker);
    transition: width 0.33s cubic-bezier(0.25, 0.46, 0.45, 0.94), background-color 0.33s cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

input[type="checkbox"]:checked + .task-content > .task-header {
    color: var(--grey-dark);
}

input[type="checkbox"]:checked + .task-content > .task-header::before {
    width: calc(100% + 8px);
    background-color: var(--grey-dark);
}

.task-info {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.horizontal-separator {
    height: 4px;
    width: 4px;
    background-color: var(--black-lighter);
    border-radius: 999px;
}

.task-priority {
    --priority-color: var(--grey);
    padding: 2px 6px;
    background-color: var(--priority-color);
    color: var(--white);
    border-radius: 4px;
    font-weight: 700;
    text-transform: capitalize;
}

.task-priority.high-priority {
    --priority-color: var(--red);
}

.medium-priority {
    --priority-color: var(--orange);
}

.low-priority {
    --priority-color: var(--green);
}

.task-actions {
    display: flex;
    gap: 0.5rem;
}

.task-button {
    height: 2.5rem;
    width: 2.5rem;
    border-radius: 0.5rem;
    border: 1px solid var(--black);
    background-color: var(--white);
    position: relative;
}
/* ... */

